<resources>
    <string name="app_name">CACAQuini</string>
    <string name="saldo_inicial_quantitat">100</string>
    <string name="saldo_inicial_quantitat_string">100 €</string>
    <string name="saldo_actual">Saldo actual:</string>
    <string name="saldo_disponible">Saldo:</string>
    <string name="saldo_quantitat">0,00 €</string>
    <string name="text_jornada">Jornada ? - ??/??/????</string>
    <string name="text_jornada_titol">Jornada</string>
    <string name="titolApp">CACAQuini</string>
    <string name="nom_usuari"> </string>
    <string name="ple_15">Ple al 15</string>
    <string name="premi_bote">Bote: \n</string>
    <string name="saldo_inicial">Saldo inicial:</string>
    <string name="coste_quiniela">Coste quiniela:</string>
    <string name="apuesta_simple">Apuestas simples:</string>
    <string name="apuesta_doble">Apuestas dobles:</string>
    <string name="apuesta_triple">Apuestas triples:</string>
    <string name="saldo_premi">Premi:</string>
    <string name="num_encerts">Núm. encerts:</string>
    <string name="premi_encerts">Premi per encerts:</string>
    <string name="premi_quiniela">Premi quiniela:</string>
    <string name="estat_bloquejada">Bloquejada!</string>
    <string name="estat_incompleta">Incompleta...</string>
    <string name="premis_quinielas">Premis/Quinielas:</string>
    <string name="marcador_prov">\?</string>
    <string name="fab_jornada_ant">JORN_ANT</string>
    <string name="fab_jornada_actual">JORN_ACT</string>
    <string name="fab_jornada_seg">JORN_SEG</string>
    <string name="fab_jornada_refresh">JORN_REFRESH</string>
    <string name="titol_resitre">Registre d\'usuari:</string>
    <string name="nom_usuari_reg">Nom:</string>
    <string name="nickname_reg">Nickname:</string>
    <string name="cognoms_usuari_reg">Cognoms:</string>
    <string name="email_reg">email:</string>
    <string name="boto_cancellar">Cancel·lar</string>
    <string name="boto_guardar">Aceptar</string>
    <!--    URLs xarxes socials    -->
    <string name="urlGmail">mailto:cacaprojectsapps@gmail.com?Subject=Comentaris CACAVolei</string>
    <string name="urlFacebook">https://www.facebook.com/cacaprojects.app.9/</string>
    <string name="urlTwitter">https://twitter.com/CaCaApps</string>
    <string name="urlInstagram">https://www.instagram.com/cacaprojectsapps/</string>
    <string name="perfil_usuari">Perfil:</string>
    <string name="perfil_usuari_valor">USUARI</string>
    <string name="boto_canviar_usuari">Canviar usuari</string>
    <string name="percentatge_cero">0%</string>
    <string name="canvi_usuari">- Canvi d\'usuari -</string>
    <string name="pregunta_usuari">"Estàs segur de voler canviar a l'usuari #?</string>
    <string name="resposta_nou">NOU</string>
    <string name="resposta_existent">EXISTENT</string>
    <string name="resposta_ok">OK</string>
    <string name="resposta_si">SI</string>
    <string name="resposta_no">NO</string>
    <string name="existeix_usuari">- Existència d\'usuari -</string>
    <string name="pregunta_existeix_usuari">"És possible que l'usuari #, existeixi. Si no existeix vols crear un de nou?</string>
    <string name="missatge_existeix_usuari">L\'usuari ja esxisteix. Introduieixi un altre nom</string>
    <string name="missatge_no_existeix_usuari">L\'usuari no esxisteix. Introduieixi un altre nom</string>
    <string name="missatge_informar_usuari">El camp Nickname ha d\'estar informat!</string>
    <string name="titol_espai_blanc">\u0020</string>
    <string name="titol_espai_guio">_</string>
</resources>